fix for too big content

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
     color: var(--text);
     transition: background 2s,color 2s;
     height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 button {
@@ -49,7 +51,7 @@ h1 {
 
 .container {
     width: 960px;
-    height: 80%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
